fix spacing issues

--- a/_sass/_layout/_header.scss
+++ b/_sass/_layout/_header.scss
@@ -12,7 +12,8 @@
     font-family: $title-font-family;
     font-size: 145px;
     font-weight: 700;
-    line-height: 128px;
+    line-height: 245px;
+    margin-top: 30px;
     margin-bottom: 0;
     text-transform: uppercase;
 
