--- a/_sass/_layout/_main.scss
+++ b/_sass/_layout/_main.scss
@@ -3,7 +3,6 @@
 .main-content {
   padding-left: 6px;
   padding-right: 6px;
-  margin-top: 90px;
 }
 
 .questions {
@@ -11,8 +10,8 @@
 }
 
 .answers {
-  margin-top: 120px;
-  margin-bottom: 120px;
+  margin-top: 75px;
+  margin-bottom: 75px;
 }
 
 
